@@ -1,6 +1,6 @@
 # IRIS
 
-A runtime for Interaction Resources & Information Services
+A runtime for Interaction, Reporting & Information Services.
 
 ## Purpose
 
@@ -13,17 +13,34 @@ The project allow you to:
 * program Hypermedia (HATEOAS) interactions with a state machine domain specific language (DSL)
 
 
-## Requires
+## Requires (within Temenos)
 
-* aphethean/jax-rs-hateoas.git (mvn install)
-* Java JDK 1.6
+* Configure settings.xml to add the following maven repository http://maven.oams.com/content/groups/all/
+* Java JDK 1.7 (JDK 1.6 by skipping some integration test modules)
 * Maven 3
+
+
+## Requires (standalone)
+
+* svn checkout http://cambridge.googlecode.com/svn/trunk/ cambridge-read-only
+* https://github.com/lucasgut/halbuilder-core.git
+* Java JDK 1.7 (JDK 1.6 by skipping some integration test modules)
+* Maven 3
+
 
 ## Build commands:
 
-mvn clean		Clean projects
-mvn install		Build and install to maven repository
-mvn install -Ddebug	Build and install to maven repository without running integration tests
-mvn site		Build maven site
-mvn site:deploy		Deploy maven site [default: C:\temp\iris\site]
+NB - Due to te InMemory database the integration tests need quite a bit of memory in the PERM space.
+`SET MAVEN_OPTS=-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m`
+
+`mvn clean` Clean projects
+
+`mvn install` Build and install to maven repository
+
+`mvn install -Ddebug` Build and install to maven repository without running integration tests
+
+`mvn site` Build maven site
+
+`mvn site:deploy` Deploy maven site [default: C:\temp\iris\site]
+
 
